[project]
name = "cs65"
version = "0.1.0"
description = "Project for CS65 Data Analysis with Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.2",
    "notebook>=7.2.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyarrow>=18.0.0",
    "scikit-learn>=1.5.2",
    "xlrd>=2.0.1",
    "yfinance>=0.2.48",
]
